fixed spacing issues when more than one book exists

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@
 h1, h2, h3, h4, h5 {
     font-family: 'Roboto Mono', monospace;
     /*margin: 0;*/
+    padding: 5px;
 }
 
 #content-bar {
@@ -62,7 +63,7 @@ h1, h2, h3, h4, h5 {
 #main-book-display {
     /*the white area*/
     background-color: whitesmoke;
-    padding: var(--grid-gap);
+    padding: var(--grid-gap) var(--grid-gap) 0 var(--grid-gap);
     margin: var(--grid-gap);
     grid-area: bookDisplay;
     min-height: 900px;
@@ -86,6 +87,7 @@ h1, h2, h3, h4, h5 {
 
 .book-card {
     /*display: flex;*/
+    margin: 0 0 var(--grid-gap) 0;
     background-color: whitesmoke;
     flex-direction: column;
     align-items: center;
